Add infos/statistique views
- Add fragments
- Add activities
- Add adapters
Show list of parties with score

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,14 @@
                 android:value="fr.eni.geekoquizz.activity.MainActivity" />
         </activity>
         <activity
+            android:name=".infostat_Activity"
+            android:label="@string/title_activity_settings"
+            android:parentActivityName=".activity.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="fr.eni.geekoquizz.activity.MainActivity" />
+        </activity>
+        <activity
             android:name=".activity.SettingsActivity"
             android:label="@string/title_activity_settings"
             android:parentActivityName=".activity.MainActivity">
