--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ repositories {
 
 dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
