--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,8 +43,10 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:1.1.1"
     implementation 'com.facebook.stetho:stetho:1.5.1'
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
+    implementation 'org.parceler:parceler-api:1.1.12'
     testImplementation 'junit:junit:4.12'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+    annotationProcessor 'org.parceler:parceler:1.1.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
