--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         </activity>
         <activity
             android:name=".activity.InfostatActivity"
-            android:label="@string/title_activity_settings"
+            android:label="@string/app_name"
             android:parentActivityName=".activity.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
